--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,10 @@ attrs==19.1.0
 certifi==2019.3.9
 chardet==3.0.4
 Django==2.1.7
+django-autocomplete-light==3.3.2
 django-debug-toolbar==1.11
+django-querysetsequence==0.10
+heroku==0.1.4
 idna==2.8
 isort==4.3.15
 lazy-object-proxy==1.3.1
@@ -16,7 +19,10 @@ psycopg2-binary==2.8
 py==1.8.0
 pycodestyle==2.5.0
 pylint==2.3.1
+pylint-django==2.0.8
+pylint-plugin-utils==0.5
 pytest==4.3.1
+python-dateutil==1.5
 pytz==2018.9
 requests==2.21.0
 six==1.12.0
