--- a/requirements.txt
+++ b/requirements.txt
@@ -3,10 +3,14 @@ atomicwrites==1.3.0
 attrs==19.1.0
 certifi==2019.3.9
 chardet==3.0.4
+dj-database-url==0.5.0
 Django==2.1.7
 django-autocomplete-light==3.3.2
 django-debug-toolbar==1.11
+django-heroku==0.3.1
 django-querysetsequence==0.10
+gunicorn==19.9.0
+hellowebapp-deploy==1.0.4
 heroku==0.1.4
 idna==2.8
 isort==4.3.15
@@ -29,5 +33,6 @@ six==1.12.0
 sqlparse==0.3.0
 typed-ast==1.3.1
 urllib3==1.24.1
-whitenoise==4.1.2
+waitress==1.1.0
+whitenoise==3.3.1
 wrapt==1.11.1
