--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,7 @@ install:
 
 before_script:
   - psql -c 'create database purbeurre;' -U postgres
-  - psql -c 'create user maxence with password 'maxence';' -U postgres
+  - psql -c "CREATE USER maxence WITH PASSWORD 'maxence';" -U postgres
   - psql -c 'grant all privileges on database purbeurre to maxence;' -U postgres
 
 
