--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,7 @@ before_script:
   - psql -c 'create database purbeurre;' -U postgres
   - psql -c "CREATE USER maxence WITH PASSWORD 'maxence';" -U postgres
   - psql -c 'grant all privileges on database purbeurre to maxence;' -U postgres
+  - psql -c 'create user django;' -U postgres
   - psql -c 'alter user django createdb;' -U postgres
 
 script:
