--- a/.travis.yml
+++ b/.travis.yml
@@ -9,10 +9,12 @@ install:
   - pip install -r requirements.txt
 
 before_script:
-  - psql -c 'create database purbeurre;' -U postgres
-  - psql -c "CREATE USER maxence WITH PASSWORD 'maxence';" -U postgres
-  - psql -c 'grant all privileges on database purbeurre to maxence;' -U postgres
-  - psql -c 'alter user travisci createdb;' -U postgres
+#  - psql -c 'create database purbeurre;' -U postgres
+#  - psql -c "CREATE USER maxence WITH PASSWORD 'maxence';" -U postgres
+#  - psql -c 'grant all privileges on database purbeurre to maxence;' -U postgres
+#  - psql -c 'alter user travisci createdb;' -U postgres
+  - psql -c 'create database travis_ci_test;' -U postgres
+
 
 script:
   - sudo python manage.py test
