--- a/requirements.txt
+++ b/requirements.txt
@@ -17,6 +17,8 @@ isort==4.3.15
 lazy-object-proxy==1.3.1
 mccabe==0.6.1
 more-itertools==6.0.0
+newrelic==4.18.0.118
+pkg-resources==0.0.0
 pluggy==0.9.0
 psycopg2==2.7.7
 psycopg2-binary==2.8
@@ -28,7 +30,9 @@ pylint-plugin-utils==0.5
 pytest==4.3.1
 python-dateutil==1.5
 pytz==2018.9
+raven==6.10.0
 requests==2.21.0
+sentry-sdk==0.7.14
 six==1.12.0
 sqlparse==0.3.0
 typed-ast==1.3.1
