--- a/requirements.txt
+++ b/requirements.txt
@@ -3,11 +3,13 @@ atomicwrites==1.3.0
 attrs==19.1.0
 certifi==2019.3.9
 chardet==3.0.4
+coverage==4.5.3
 dj-database-url==0.5.0
 Django==2.1.7
 django-autocomplete-light==3.3.2
 django-debug-toolbar==1.11
 django-heroku==0.3.1
+django-nose==1.4.6
 django-querysetsequence==0.10
 gunicorn==19.9.0
 hellowebapp-deploy==1.0.4
@@ -17,6 +19,7 @@ isort==4.3.15
 lazy-object-proxy==1.3.1
 mccabe==0.6.1
 more-itertools==6.0.0
+nose==1.3.7
 pluggy==0.9.0
 psycopg2==2.7.7
 psycopg2-binary==2.8
